--- a/package.json
+++ b/package.json
@@ -16,8 +16,5 @@
   "bugs": {
     "url": "https://github.com/Nicolas829/https---github.com-Nicolas829-P6_30062021/issues"
   },
-  "homepage": "https://github.com/Nicolas829/https---github.com-Nicolas829-P6_30062021#readme",
-  "devDependencies": {
-    "eslint": "^7.32.0"
-  }
+  "homepage": "https://github.com/Nicolas829/https---github.com-Nicolas829-P6_30062021#readme"
 }
